--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@librescore/sf3": "^0.8.0",
     "@svgdotjs/svg.js": "^3.2.4",
     "functional-red-black-tree": "^1.0.1",
+    "pdfkit": "^0.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-json-tree": "^0.19.0",
+    "svg-to-pdfkit": "^0.1.8",
     "webmscore": "^1.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/functional-red-black-tree": "^1.0.6",
+    "@types/pdfkit": "^0.13.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/svg-to-pdfkit": "^0.1.3",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
